# htmx-chat

./: .env.sample  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.py
.claude/: settings.json
.claude/skills/langchain-fundamentals/: SKILL.md
app/: main.py  sample.py
app/core/: ai.py  auth.py  config.py  templates.py
app/routers/: chat.py  chat_ui.py  home.py  launch.py
app/static/css/: app.css  app.min.css
app/static/js/: chat.js
app/templates/: _app_layout.html  _base.html  _sidebar.html  chat_ui.html  home.html  login.html
app/templates/errors/: 404.html  500.html
docs/: auth.md  chat-streaming.md  design-patterns.md  overview.md  screens.md
