[project]
name = "htmx-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.9",
    "langchain-google-genai>=4.2.5",
    "langchain-google-vertexai>=3.2.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
